# short_video

douyin_automation/: .env.example  README.md  pyproject.toml  requirements.txt
douyin_automation/.hypothesis/constants/: 03d5aedab3048ac7  0480c63c608054a3  04ff343dfced391d  31c9bc2bef68b67a  40d058b60e4b5236  63ed98631bb94461  68d6d1a8bfb34791  68e4ae4092011946  6d84b568e89a74b6  7c40ed667ce462c5  a90e9df59980b664  c11f3d03bad42b5d  cbb6ef4a6a8bc8f7  f81eaef9c69d82dd
douyin_automation/data/descriptions/: feigua_01_.json  feigua_02_.json
douyin_automation/data/materials/: analysis_result.json
douyin_automation/data/materials/feigua_01_/: description.json
douyin_automation/data/materials/feigua_02_/: description.json
douyin_automation/data/ranks/2026-03-25/: all_ranks.json  品牌自营榜.json  品牌销售榜.json  商品搜索榜.json  商品热词榜.json  商品销售榜.json  官方店销售榜.json  实时直播热榜.json  小店销售榜.json  带货达人榜.json  新品销售榜.json  热门话题榜.json  直播带货达人榜.json  直播热度榜.json  视频带货达人榜.json  达人推广榜.json
douyin_automation/scripts/: collect_real_materials.py  debug_douyin_dom.py  fetch_all_ranks.py  fetch_feigua.py  get_rank_links.py  run_collect.py  run_pipeline_4_5.py  start_chrome.sh
douyin_automation/src/douyin_automation/: __init__.py
douyin_automation/src/douyin_automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
douyin_automation/src/douyin_automation/analyzer/: __init__.py  product_analyzer.py
douyin_automation/src/douyin_automation/collector/: __init__.py  (+1 more)
douyin_automation/tests/: test_analyzer.py  test_content_analyzer.py  test_crawler.py  test_material_collector.py
(+20 files in other folders)
